--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to `cf_xarray`\n",
     "\n",
-    "This notebook is a brief introduction to `cf_xarray`'s current capabilities.\n"
+    "This notebook is a brief introduction to `cf_xarray`'s current capabilities."
    ]
   },
   {
@@ -20,9 +20,10 @@
    },
    "outputs": [],
    "source": [
-    "import cf_xarray as cfxr\n",
     "import numpy as np\n",
     "import xarray as xr\n",
+    "\n",
+    "import cf_xarray as cfxr\n",
     "\n",
     "# For this notebooks, it's nicer if we don't show the array values by default\n",
     "xr.set_options(display_expand_data=False)"
@@ -32,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`cf_xarray` works best when `xarray` keeps attributes by default.\n"
+    "`cf_xarray` works best when `xarray` keeps attributes by default."
    ]
   },
   {
@@ -48,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets read two datasets.\n"
+    "Lets read two datasets."
    ]
   },
   {
@@ -73,7 +74,7 @@
    "source": [
     "This one is inspired by POP model output and illustrates how the coordinates\n",
     "attribute is interpreted. It also illustrates one way of tagging curvilinear\n",
-    "grids for convenient use of `cf_xarray`\n"
+    "grids for convenient use of `cf_xarray`"
    ]
   },
   {
@@ -97,7 +98,7 @@
    "metadata": {},
    "source": [
     "This synthetic dataset has multiple `X` and `Y` coords. An example would be\n",
-    "model output on a staggered grid.\n"
+    "model output on a staggered grid."
    ]
   },
   {
@@ -120,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset has ancillary variables\n"
+    "This dataset has ancillary variables"
    ]
   },
   {
@@ -146,7 +147,7 @@
     "## What attributes have been discovered?\n",
     "\n",
     "The criteria for identifying variables using CF attributes are listed\n",
-    "[here](../criteria.rst).\n"
+    "[here](../criteria.rst)."
    ]
   },
   {
@@ -171,7 +172,7 @@
     "`'X'` axis as being represented by the `lon` variable.\n",
     "\n",
     "It can also use the `standard_name` and `units` attributes to infer that `lon`\n",
-    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use `ds.cf`\n"
+    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use `ds.cf`"
    ]
   },
   {
@@ -194,7 +195,7 @@
    "source": [
     "For `pop`, only `latitude` and `longitude` are detected, not `X` or `Y`. Please\n",
     "comment here: https://github.com/xarray-contrib/cf-xarray/issues/23 if you have\n",
-    "opinions about this behaviour.\n"
+    "opinions about this behaviour."
    ]
   },
   {
@@ -215,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For `multiple`, multiple `X` and `Y` coordinates are detected\n"
+    "For `multiple`, multiple `X` and `Y` coordinates are detected"
    ]
   },
   {
@@ -239,7 +240,7 @@
     "## Feature: Accessing coordinate variables\n",
     "\n",
     "`.cf` implements `__getitem__` to allow easy access to coordinate and axis\n",
-    "variables.\n"
+    "variables."
    ]
   },
   {
@@ -261,7 +262,7 @@
    "metadata": {},
    "source": [
     "Indexing with a scalar key raises an error if the key maps to multiple variables\n",
-    "names\n"
+    "names"
    ]
   },
   {
@@ -303,7 +304,7 @@
    "metadata": {},
    "source": [
     "To get back all variables associated with that key, pass a single element list\n",
-    "instead.\n"
+    "instead."
    ]
   },
   {
@@ -338,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DataArrays return DataArrays\n"
+    "DataArrays return DataArrays"
    ]
   },
   {
@@ -361,7 +362,7 @@
    "source": [
     "`Dataset.cf[...]` returns a single `DataArray`, parsing the `coordinates`\n",
     "attribute if present, so we correctly get the `TLONG` variable and not the\n",
-    "`ULONG` variable\n"
+    "`ULONG` variable"
    ]
   },
   {
@@ -384,7 +385,7 @@
    "metadata": {},
    "source": [
     "`Dataset.cf[...]` also interprets the `ancillary_variables` attribute. The\n",
-    "ancillary variables are returned as coordinates of a DataArray\n"
+    "ancillary variables are returned as coordinates of a DataArray"
    ]
   },
   {
@@ -406,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature: Accessing variables by standard names\n"
+    "## Feature: Accessing variables by standard names"
    ]
   },
   {
@@ -427,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that ancillary variables are included as coordinate variables\n"
+    "Note that ancillary variables are included as coordinate variables"
    ]
   },
   {
@@ -450,7 +451,7 @@
    "source": [
     "## Feature: Utility functions\n",
     "\n",
-    "There are some utility functions to allow use by downstream libraries\n"
+    "There are some utility functions to allow use by downstream libraries"
    ]
   },
   {
@@ -471,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can test for presence of these keys\n"
+    "You can test for presence of these keys"
    ]
   },
   {
@@ -492,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also get out the available Axis names\n"
+    "You can also get out the available Axis names"
    ]
   },
   {
@@ -509,7 +510,7 @@
    "metadata": {},
    "source": [
     "or available Coordinate names. Same for cell measures (`.cf.cell_measures`) and\n",
-    "standard names (`.cf.standard_names`).\n"
+    "standard names (`.cf.standard_names`)."
    ]
   },
   {
@@ -527,7 +528,7 @@
    "source": [
     "**Note:** Although it is possible to assign additional coordinates,\n",
     "`.cf.coordinates` only returns a subset of\n",
-    "`(\"longitude\", \"latitude\", \"vertical\", \"time\")`.\n"
+    "`(\"longitude\", \"latitude\", \"vertical\", \"time\")`."
    ]
   },
   {
@@ -537,7 +538,7 @@
     "## Feature: Rewriting property dictionaries\n",
     "\n",
     "`cf_xarray` will rewrite the `.sizes` and `.chunks` dictionaries so that one can\n",
-    "index by a special CF axis or coordinate name\n"
+    "index by a special CF axis or coordinate name"
    ]
   },
   {
@@ -561,9 +562,9 @@
     "Note the duplicate entries above:\n",
     "\n",
     "1. One for `X`, `Y`, `T`\n",
-    "2. and one for `longitude`, `latitude` and `time`.\n",
+    "1. and one for `longitude`, `latitude` and `time`.\n",
     "\n",
-    "An error is raised if there are multiple `'X'` variables (for example)\n"
+    "An error is raised if there are multiple `'X'` variables (for example)"
    ]
   },
   {
@@ -607,7 +608,7 @@
     "another dataset.\n",
     "\n",
     "In this example, a one-to-one mapping is not possible and the coordinate\n",
-    "variables are not renamed.\n"
+    "variables are not renamed."
    ]
   },
   {
@@ -627,7 +628,7 @@
     "If we exclude all axes (variables with `axis` attribute), a one-to-one mapping\n",
     "is possible. In this example, `TLONG` and `TLAT` are renamed to `lon` and `lat`\n",
     "i.e. their counterparts in `ds`. Note the the `coordinates` attribute is\n",
-    "appropriately changed.\n"
+    "appropriately changed."
    ]
   },
   {
@@ -655,14 +656,14 @@
     "or `dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on\n",
     "the attributes present in the dataset.\n",
     "\n",
-    "Here are a few examples\n"
+    "Here are a few examples"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing\n"
+    "### Slicing"
    ]
   },
   {
@@ -684,7 +685,7 @@
    "metadata": {},
    "source": [
     "Slicing works will expand a single key like `X` to multiple dimensions if those\n",
-    "dimensions are tagged with `axis: X`\n"
+    "dimensions are tagged with `axis: X`"
    ]
   },
   {
@@ -705,7 +706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reductions\n"
+    "### Reductions"
    ]
   },
   {
@@ -726,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Expanding to multiple dimensions is also supported\n"
+    "Expanding to multiple dimensions is also supported"
    ]
   },
   {
@@ -748,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotting\n"
+    "### Plotting"
    ]
   },
   {
@@ -783,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`cf_xarray` can facet\n"
+    "`cf_xarray` can facet"
    ]
   },
   {
@@ -798,9 +799,7 @@
    "outputs": [],
    "source": [
     "seasonal = (\n",
-    "    ds.air.groupby(\"time.season\")\n",
-    "    .mean()\n",
-    "    .reindex(season=[\"DJF\", \"MAM\", \"JJA\", \"SON\"])\n",
+    "    ds.air.groupby(\"time.season\").mean().reindex(season=[\"DJF\", \"MAM\", \"JJA\", \"SON\"])\n",
     ")\n",
     "seasonal.cf.plot(x=\"longitude\", y=\"latitude\", col=\"season\")"
    ]
@@ -809,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resample & groupby\n"
+    "### Resample & groupby"
    ]
   },
   {
@@ -830,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`cf_xarray` also understands the \"datetime accessor\" syntax for groupby\n"
+    "`cf_xarray` also understands the \"datetime accessor\" syntax for groupby"
    ]
   },
   {
@@ -851,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rolling & coarsen\n"
+    "### Rolling & coarsen"
    ]
   },
   {
@@ -880,14 +879,14 @@
     "`coarsen` works but everything later will break because of xarray bug\n",
     "https://github.com/pydata/xarray/issues/4120\n",
     "\n",
-    "`ds.isel(lon=slice(50)).cf.coarsen(Y=5, X=10).mean()`\n"
+    "`ds.isel(lon=slice(50)).cf.coarsen(Y=5, X=10).mean()`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature: mix \"special names\" and variable names\n"
+    "## Feature: mix \"special names\" and variable names"
    ]
   },
   {
@@ -911,7 +910,7 @@
     "## Feature: Weight by Cell Measures\n",
     "\n",
     "`cf_xarray` can weight by cell measure variables if the appropriate attribute is\n",
-    "set\n"
+    "set"
    ]
   },
   {
@@ -959,7 +958,7 @@
     "## Feature: Cell boundaries and vertices\n",
     "\n",
     "`cf_xarray` can infer cell boundaries (for rectilinear grids) and convert\n",
-    "CF-standard bounds variables to vertices.\n"
+    "CF-standard bounds variables to vertices."
    ]
   },
   {
@@ -977,7 +976,7 @@
    "metadata": {},
    "source": [
     "We can also convert each bounds variable independently with the top-level\n",
-    "functions\n"
+    "functions"
    ]
   },
   {
@@ -1010,7 +1009,7 @@
     "## Feature: Add canonical CF attributes\n",
     "\n",
     "`cf_xarray` can add missing canonical CF attributes consistent with the official\n",
-    "[CF standard name table](https://cfconventions.org/standard-names.html).\n"
+    "[CF standard name table](https://cfconventions.org/standard-names.html)."
    ]
   },
   {
