Change broken link

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -147,7 +147,7 @@
     "## What attributes have been discovered?\n",
     "\n",
     "The criteria for identifying variables using CF attributes are listed\n",
-    "[here](../criteria.rst)."
+    "[here](../contributing.rst)."
    ]
   },
   {
